OpenAPI - Added git endpoints
