# openapi/rust/src/models/mod.rs
@@ -20,6 +20,14 @@ pub mod feed_order_field;
 pub use self::feed_order_field::FeedOrderField;
 pub mod get_healthz_200_response;
 pub use self::get_healthz_200_response::GetHealthz200Response;
+pub mod git_status_file_change;
+pub use self::git_status_file_change::GitStatusFileChange;
+pub mod git_status_hunk;
+pub use self::git_status_hunk::GitStatusHunk;
+pub mod git_status_summary;
+pub use self::git_status_summary::GitStatusSummary;
+pub mod git_worktree_status;
+pub use self::git_worktree_status::GitWorktreeStatus;
 pub mod insert_message;
 pub use self::insert_message::InsertMessage;
 pub mod insert_message_one_of;
